...
        child: Column(
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
            const CircleAvatar(radius: 50, child: Icon(Icons.person, size: 50)),
            const SizedBox(height: 16),
            Text(
              'Welcome',
            ),
            Text(
              key: const Key('user_greeting'),
              'Welcome, ${user.name}',
              style: Theme.of(context).textTheme.titleLarge,
            ),
...
